<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtOne"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:gravity="center"
        android:text="@string/Haruna"
        android:textSize="20pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTwo"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:padding="23dp"
        android:text="@string/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOne" />

    <Button
        android:id="@+id/buttonOpen"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginEnd="10dp"
        android:onClick="buttonOpen_click"
        android:text="@string/show_haruna"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/txtTwo" />

    <Button
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="button_click"
        android:text="@string/quit"
        app:layout_constraintEnd_toEndOf="@+id/txtTwo"
        app:layout_constraintTop_toBottomOf="@+id/txtTwo" />

    <TextView
        android:id="@+id/txtThree"
        android:layout_width="334dp"
        android:layout_height="34dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/copyright"
        android:textColor="#aaaaaa"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>